# wethervane

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
api/: main.py  models.py
config/: model.yaml  ridge_feature_exclusions.yaml
docs/: ARCHITECTURE.md  ASSUMPTIONS_LOG.md  DATA_SOURCES.md  DATA_SOURCE_IDEATION.md  DECISIONS_LOG.md  FUTURE_DEV.md  MODEL_VERIFICATION_PLAN.md  ROADMAP.md  SABERMETRICS_ARCHITECTURE.md  SOURCE_LOG.md  TODO-autonomous-improvements.md  TODO-data-source-research.md  TODO-local-election-research.md  TODO-vest-expansion.md  VISION.md  election-night-live-mode-design.md  frontend-v2-audit-2026-03-29.md  frontend-v2-audit-v2-2026-03-30.md  frontend-v2-evaluation-rubric.md  hdbscan-experiment-S178.md  kmeans-stability-experiment-S165.md  lighthouse-audit-S254.md  phase4-crosstab-pilot-research.md  poll-data-sources-research-S175.md  republican-overestimation-analysis-S238.md  spectral-experiment-S175.md  spot-check-county-priors-S164.md  turnout-dimension-experiment-S186.md  variation-partitioning-S175.md
experiments/: hdbscan_experiment.py  kmeans_stability.py  tract_nonpolitical_only.yaml  tract_political_only.yaml  turnout_dimension_experiment.py
research/: community-detection-research.md  cross-disciplinary-methods.md  methods_and_tools_research.md  moneyball-politician-analytics.md  voter-stability-evidence.md
scripts/: analyze_poll_coverage.py  assemble_national_presidential_actuals.py  audit_covariance_cross_race.py  build_county_geojson.py  build_county_type_assignments.py  build_national_tract_geojson.py  check_prediction_changes.py  compare_w_vector_modes.py  exp_pca_clustering.py  experiment_cross_election_loo.py  experiment_ensemble_weight_sweep.py  experiment_feature_importance.py  experiment_hierarchical_shrinkage.py  experiment_j_sweep.py  experiment_lambda_sweep.py  experiment_min_type_size.py  experiment_observed_primary_cov.py  experiment_ridge_augmented.py  experiment_ridge_demographics_full.py  (+23 more)
(+677 files in other folders)
